# mcp-fmri-package

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
docs/: CONTRIBUTING.md  bias_reduction_economics.md
examples/: advanced_analysis.py  basic_usage.py  jupyter_notebook_example.ipynb
examples/config_examples/: analysis_config.yaml  preprocessing_config.yaml
src/mcp_fmri/: __init__.py  analysis.py  bias_reduction.py  cli.py  cultural.py  preprocessing.py  utils.py
src/mcp_fmri/data/: sample_demographics.csv
tests/: test_economic_bias.py
