[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-fmri"
version = "0.1.0"
authors = [
    {name = "Tatsuru Kikuchi", email = "contact@example.com"},
]
description = "Ethical Analysis of Mathematical Abilities Using Generative AI and fMRI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["fMRI", "neuroimaging", "mathematical cognition", "gender analysis", "ethical AI", "generative AI"]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "scikit-learn>=0.24.0",
    "plotly>=5.0.0",
    "statsmodels>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "jupyter",
]
dash = [
    "dash>=2.0.0",
]
neuroimaging = [
    "nibabel>=3.0.0",
    "nilearn>=0.8.0",
]

[project.urls]
"Homepage" = "https://github.com/Tatsuru-Kikuchi/MCP-fMRI"
"Bug Reports" = "https://github.com/Tatsuru-Kikuchi/MCP-fMRI/issues"
"Source" = "https://github.com/Tatsuru-Kikuchi/MCP-fMRI"
"Documentation" = "https://tatsuru-kikuchi.github.io/MCP-fMRI/"

[project.scripts]
mcp-fmri-preprocess = "mcp_fmri.cli:preprocess_cli"
mcp-fmri-analyze = "mcp_fmri.cli:analyze_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mcp_fmri" = ["data/*.csv", "templates/*.html"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=mcp_fmri"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true